fix: department에 따른 정보 searching + Query문 추가